--- a/package.json
+++ b/package.json
@@ -8,8 +8,25 @@
   "dependencies": {
     "lodash": "^4.17.19",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0"
   },
+  "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1"
+  },
+  "browserslist": [
+    "last 1 Chrome versions"
+  ],
   "main": "index.js",
-  "repository": "https://github.com/ywalakamar/simple-webpack.git"
+  "repository": "https://github.com/ywalakamar/simple-webpack.git",
+  "scripts": {
+    "lint": "eslint ./"
+  }
 }
