--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "lodash": "^4.17.19",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
-    "@babel/register": "^7.9.0"
+    "@babel/register": "^7.9.0",
+    "lodash": "^4.17.19",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint-plugin-import": "^2.20.1",
+    "style-loader": "^1.2.1"
   },
   "browserslist": [
     "last 1 Chrome versions"
@@ -27,6 +29,7 @@
   "main": "index.js",
   "repository": "https://github.com/ywalakamar/simple-webpack.git",
   "scripts": {
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "build": "webpack"
   }
 }
