--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
+    "file-loader": "^6.0.0",
     "style-loader": "^1.2.1"
   },
   "browserslist": [
