--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
