chore(development): add development tools [ - ] add source maps [ - ] use watch mode

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-import": "^2.20.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "browserslist": [
     "last 1 Chrome versions"
@@ -33,6 +34,7 @@
   "repository": "https://github.com/ywalakamar/simple-webpack.git",
   "scripts": {
     "lint": "eslint ./",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   }
 }
