--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "repository": "https://github.com/ywalakamar/simple-webpack.git",
   "scripts": {
     "lint": "eslint ./",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   }
 }
