--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@babel/register": "^7.9.0",
     "lodash": "^4.17.19",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "express": "^4.17.1",
+    "webpack-dev-middleware": "^3.7.2"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
@@ -22,11 +24,10 @@
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "express": "^4.17.1",
+    
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "style-loader": "^1.2.1",
-    "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0"
   },
   "browserslist": [
